--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandro Mendoza</title>
 </head>
-<body>
     <h1>Alejandro Mendoza</h1>
     <div>
         <ul>
-            <li>Home</li>
-            <li>Biography</li>
-            <li>Teaching</li>
-            <li>Recordings</li>
-            <li>Contact</li>
+            <li><button>Home</button></li>
+            <li><a href ="biography/">Biography</a></li>
+            <li><a href ="teaching/">Teaching</a></li>
+            <li><a href ="recordings/">Recordings</a></li>
+            <li><a href ="contact/">Contact</a></li>
         </ul>
     </div>
+<body>
     <img src="alejandro_mendoza_image.jpg">
     <div>
         Alejandro Mendoza
