fixed menu page links bug

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div>
         <ul>
             <li><button>Home</button></li>
-            <li><a href ="biography/">Biography</a></li>
-            <li><a href ="teaching/">Teaching</a></li>
-            <li><a href ="recordings/">Recordings</a></li>
-            <li><a href ="contact/">Contact</a></li>
+            <li><a href ="biography/biography.html">Biography</a></li>
+            <li><a href ="teaching/teaching.html">Teaching</a></li>
+            <li><a href ="recordings/recordings.html">Recordings</a></li>
+            <li><a href ="contact/contact.html">Contact</a></li>
         </ul>
     </div>
 <body>
